Refactor: Use valueOf instead of wrapper constructors for better performance and clarity